--- a/automation/test-output/old/Default suite/classes.html
+++ b/automation/test-output/old/Default suite/classes.html
@@ -14,6 +14,14 @@
 <td>fasdasd</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>searchBlouseProduct1</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchBlouseProduct</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
