--- a/automation/test-output/old/Default suite/methods-alphabetical.html
+++ b/automation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="77e97b">  <td>22/01/13 15:05:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanup()[pri:0, instance:test.login@4313f5bc]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td>  <td>main@78204644</td>   <td></td> </tr>
-<tr bgcolor="a664f2">  <td>22/01/13 15:05:13</td>   <td>-34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.fasdasd()[pri:0, instance:test.login@4313f5bc]">fasdasd</td> 
-  <td>main@78204644</td>   <td></td> </tr>
-<tr bgcolor="77e97b">  <td>22/01/13 15:05:11</td>   <td>-2377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:test.login@4313f5bc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@78204644</td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanup()[pri:0, instance:test.login@6d2a209c]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanup()[pri:0, instance:test.login@6d2a209c]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanup()[pri:0, instance:test.login@6d2a209c]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
+<tr bgcolor="77e97b">  <td>22/01/17 14:53:58</td>   <td>-5026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.fasdasd()[pri:0, instance:test.login@6d2a209c]">fasdasd</td> 
+  <td>main@1741979653</td>   <td></td> </tr>
+<tr bgcolor="77e97b">  <td>22/01/17 14:54:01</td>   <td>-2254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.searchBlouseProduct()[pri:0, instance:test.login@6d2a209c]">searchBlouseProduct</td> 
+  <td>main@1741979653</td>   <td></td> </tr>
+<tr bgcolor="77e97b">  <td>22/01/17 14:54:03</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.searchBlouseProduct1()[pri:0, instance:test.login@6d2a209c]">searchBlouseProduct1</td> 
+  <td>main@1741979653</td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:test.login@6d2a209c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:test.login@6d2a209c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
+<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:test.login@6d2a209c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
 </table>
