--- a/automation/test-output/old/Default suite/methods-alphabetical.html
+++ b/automation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanup()[pri:0, instance:test.login@6d2a209c]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanup()[pri:0, instance:test.login@6d2a209c]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanup()[pri:0, instance:test.login@6d2a209c]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
-<tr bgcolor="77e97b">  <td>22/01/17 14:53:58</td>   <td>-5026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.fasdasd()[pri:0, instance:test.login@6d2a209c]">fasdasd</td> 
-  <td>main@1741979653</td>   <td></td> </tr>
-<tr bgcolor="77e97b">  <td>22/01/17 14:54:01</td>   <td>-2254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.searchBlouseProduct()[pri:0, instance:test.login@6d2a209c]">searchBlouseProduct</td> 
-  <td>main@1741979653</td>   <td></td> </tr>
-<tr bgcolor="77e97b">  <td>22/01/17 14:54:03</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.searchBlouseProduct1()[pri:0, instance:test.login@6d2a209c]">searchBlouseProduct1</td> 
-  <td>main@1741979653</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:test.login@6d2a209c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:test.login@6d2a209c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
-<tr bgcolor="6cff7a">  <td>22/01/17 14:54:03</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:test.login@6d2a209c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1741979653</td>   <td></td> </tr>
+<tr bgcolor="e5637f">  <td>22/01/23 22:41:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.cleanup()[pri:0, instance:ampeg.test.NewTest@2ea227af]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td>  <td>main@1199673596</td>   <td></td> </tr>
+<tr bgcolor="e2d983">  <td>22/01/23 22:41:49</td>   <td>-2493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f()[pri:0, instance:ampeg.test.NewTest@2ea227af]">f</td> 
+  <td>main@1199673596</td>   <td></td> </tr>
+<tr bgcolor="e5637f">  <td>22/01/23 22:41:45</td>   <td>-5813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:ampeg.test.NewTest@2ea227af]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1199673596</td>   <td></td> </tr>
 </table>
